--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -22,6 +22,20 @@
     display: none;
   }
 
+  .img-hover {
+    --a: 8deg;
+    /* control the angle of rotation (the smaller, the better) */
+    aspect-ratio: 1;
+    transform: perspective(400px) rotate3d(var(--r, 1, -1), 0, calc(var(--i, 1) * var(--a)));
+    mask: linear-gradient(135deg, #000c 40%, #000, #000c 60%) 100% 100%/250% 250%;
+    transition: 0.7s;
+  }
+
+  .img-hover:hover {
+    --i: -1;
+    mask-position: 0 0;
+  }
+
   .input {
     @apply sm:flex-1 max-sm:w-full text-base leading-normal text-slate-gray pl-5 max-sm:p-5 outline-none sm:border-none border max-sm:border-slate-gray max-sm:rounded-full;
   }
