--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -85,6 +85,6 @@
   }
 
   .info-text {
-    @apply font-montserrat text-slate-gray text-lg leading-7;
+    @apply font-montserrat text-slate-gray text-lg leading-7 break-words;
   }
 }
